--- a/workspace/jbpm/pom.xml
+++ b/workspace/jbpm/pom.xml
@@ -53,6 +53,50 @@
 			<version>1.2.0</version> </dependency> <dependency> <groupId>org.jbpm</groupId> 
 			<artifactId>jbpm-test</artifactId> </dependency> -->
 
+
+		<dependency>
+			<groupId>org.jbpm</groupId>
+			<artifactId>jbpm-flow</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jbpm</groupId>
+			<artifactId>jbpm-flow-builder</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jbpm</groupId>
+			<artifactId>jbpm-bpmn2</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jbpm</groupId>
+			<artifactId>jbpm-persistence-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jbpm</groupId>
+			<artifactId>jbpm-human-task-core</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jbpm</groupId>
+			<artifactId>jbpm-runtime-manager</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.2</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.codehaus.btm</groupId>
+			<artifactId>btm</artifactId>
+			<version>2.1.4</version>
+		</dependency>
+
+		<!--  
 		<dependency>
 			<groupId>org.jbpm</groupId>
 			<artifactId>jbpm-audit</artifactId>
@@ -187,7 +231,7 @@
 			<version>1.0.9</version>
 			<scope>test</scope>
 		</dependency>
-
+		-->
 
 	</dependencies>
 
