Delete .jndi.properties Eliminado metodos nao utilzados e alguns blocos de comentarios

--- a/easybpms-jbpm/pom.xml
+++ b/easybpms-jbpm/pom.xml
@@ -1,39 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-  	<groupId>com.bpms</groupId>
-	<artifactId>jbpm</artifactId>
+	<groupId>com.bpms</groupId>
+	<artifactId>easybpms-jbpm</artifactId>
 	<packaging>bundle</packaging>
 	<version>1.0</version>
 
 	<name>jBPM Maven</name>
-	
+
 	<properties>
 		<jbpm.version>6.4.0.Final</jbpm.version>
 	</properties>
 
 
-  <repositories>
-    <repository>
-      <id>jboss-public-repository-group</id>
-      <name>JBoss Public Repository Group</name>
-      <url>http://repository.jboss.org/nexus/content/groups/public/</url>
-      <releases>
-        <enabled>true</enabled>
-        <updatePolicy>never</updatePolicy>
-      </releases>
-      <snapshots>
-        <enabled>true</enabled>
-        <updatePolicy>daily</updatePolicy>
-      </snapshots>
-    </repository>
-  </repositories>
-  
-  <dependencyManagement>
+	<repositories>
+		<repository>
+			<id>jboss-public-repository-group</id>
+			<name>JBoss Public Repository Group</name>
+			<url>http://repository.jboss.org/nexus/content/groups/public/</url>
+			<releases>
+				<enabled>true</enabled>
+				<updatePolicy>never</updatePolicy>
+			</releases>
+			<snapshots>
+				<enabled>true</enabled>
+				<updatePolicy>daily</updatePolicy>
+			</snapshots>
+		</repository>
+	</repositories>
+
+	<dependencyManagement>
 		<dependencies>
 			<dependency>
 				<groupId>org.jbpm</groupId>
@@ -44,15 +43,15 @@
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-  
-  <dependencies>
+
+	<dependencies>
 
 		<dependency>
 			<groupId>com.api</groupId>
 			<artifactId>easybpms</artifactId>
 			<version>1.0</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jbpm</groupId>
 			<artifactId>jbpm-flow</artifactId>
@@ -62,7 +61,7 @@
 			<groupId>org.jbpm</groupId>
 			<artifactId>jbpm-flow-builder</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.jbpm</groupId>
 			<artifactId>jbpm-bpmn2</artifactId>
@@ -82,14 +81,20 @@
 			<groupId>org.jbpm</groupId>
 			<artifactId>jbpm-runtime-manager</artifactId>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.2</version>
 		</dependency>
+
+		<!-- SPRING -->
+		<dependency>
+			<groupId>org.kie</groupId>
+			<artifactId>kie-spring</artifactId>
+		</dependency>
 	</dependencies>
-	
+
 	<build>
 
 		<plugins>
@@ -106,7 +111,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		
+
 	</build>
-	
+
 </project>
