--- a/easybpms/pom.xml
+++ b/easybpms/pom.xml
@@ -13,7 +13,8 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<!-- <version>5.1.0.Final</version>-->
-			<version>4.2.21.Final</version>
+			<!-- <version>4.2.21.Final</version> -->
+			<version>4.3.11.Final</version>
 		</dependency>
 
 		<!-- for JPA, use hibernate-entitymanager instead of hibernate-core -->
@@ -21,12 +22,14 @@
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<!-- <version>5.1.0.Final</version>-->
-			<version>4.2.21.Final</version>
+			<!-- <version>4.2.21.Final</version> -->
+			<version>4.3.11.Final</version>
 		</dependency>
 
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
+			<!-- <version>6.0.3</version> -->
 			<version>5.1.38</version>
 		</dependency>
 
