--- a/easybpms-jbpm/.classpath
+++ b/easybpms-jbpm/.classpath
@@ -18,7 +18,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/easybpms"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/easybpms-core"/>
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java">
 		<attributes>
 			<attribute name="optional" value="true"/>
