Adicao do conector SendTaskWorkItem ServiceTaskWorkItem modificado para suportar parametros

--- a/easybpms-jbpm/pom.xml
+++ b/easybpms-jbpm/pom.xml
@@ -45,13 +45,15 @@
 	</dependencyManagement>
 
 	<dependencies>
-
+	
+		<!-- EASYBPMS -->
 		<dependency>
 			<groupId>com.easybpms</groupId>
 			<artifactId>easybpms-core</artifactId>
 			<version>1.0</version>
 		</dependency>
 
+		<!-- JBPM -->
 		<dependency>
 			<groupId>org.jbpm</groupId>
 			<artifactId>jbpm-flow</artifactId>
