--- a/easybpms-core-txlocal/pom.xml
+++ b/easybpms-core-txlocal/pom.xml
@@ -19,6 +19,13 @@
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>5.1.0.Final</version>
 		</dependency>
+		
+		<!-- H2 -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.3.168</version>
+		</dependency>
 
 	</dependencies>
 	
